@@ -1,2 +1,9 @@
 # archura-platform-agent
+
 Archura Platform Agent
+
+```
+mvn clean install
+
+java -javaagent:/path/to/archura-platform-agent-0.0.1-jar-with-dependencies.jar --enable-preview --add-exports java.base/jdk.internal.reflect=ALL-UNNAMED  -jar path/to/archura-platform.jar
+```
